[package]
name = "rsync_ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.6", features = ["derive"] }
serde_yaml = "0.9.25"
directories = "5.0.1"
